Fix z-index and use nav element

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   background-color: #155e75;
   grid-row-start: 1;
   grid-row-end: 3;
+  z-index: 3;
 }
 
 #sidebar h1 {
@@ -34,7 +35,7 @@ body {
   margin-right: auto;
 }
 
-#navigation {
+nav {
   color: white;
   display: grid;
   grid-template: 50px / 70px 100px;
@@ -54,7 +55,7 @@ body {
   padding-left: 5%;
   padding-right: 5%;
   grid-template: 50% 50% / 55% 35%;
-  z-index: -1;
+  z-index: 2;
 }
 
 #search {
@@ -78,5 +79,5 @@ body {
 
 #main-content {
   background-color: #0891b2;
-  z-index: -2;
+  z-index: 1;
 }
